# 100-Days-Python

./: main.py  pyproject.toml
Average Height Calculator/: main.py
Caesar Cipher/: encryption.py  main.py
Hangman/: main.py
Password Generator/: main.py
Prime Number Checker/: main.py
Rock Paper Scissor/: main.py
Tip Calculator/: main.py
