[tool.poetry]
name = "repl_python3_100-Days-Python"
version = "0.1.0"
description = ""
authors = ["simonshrest <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
clear = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
